<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/animalnames"
    tools:context="com.example.android.educationquiz.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:hint="@string/your_name"
            android:textColor="#f50057"
            android:textSize="30sp"/>
         <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="20dp"
            android:background="#558b2f"
            android:elevation="4dp"
            android:orientation="vertical"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:paddingStart="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_1"
                android:textColor="#f50057"
                android:textSize="24sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_1"
                android:textColor="#ccff90"
                android:textSize="24sp"
                android:textStyle="bold"/>

            <RadioGroup
                android:id="@+id/question1_Option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/question1_option1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/question1_piglets"
                    android:textColor="#ccff90"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <RadioButton
                    android:id="@+id/question1_option2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/question1_puppies"
                    android:textColor="#ccff90"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <RadioButton
                    android:id="@+id/question1_option3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/question1_poppies"
                    android:textColor="#ccff90"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <RadioButton
                    android:id="@+id/question1_option4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/question1_pansies"
                    android:textColor="#ccff90"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="20dp"
            android:background="#558b2f"
            android:elevation="4dp"
            android:orientation="vertical"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:paddingStart="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_2"
                android:textColor="#f50057"
                android:textSize="24sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_2"
                android:textColor="#ccff90"
                android:textSize="24sp"
                android:textStyle="bold"/>

            <RadioGroup
                android:id="@+id/question2_Option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/question2_option1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/question2_puppy"
                    android:textColor="#ccff90"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/question2_option2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/question2_calf"
                    android:textColor="#ccff90"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />

                <RadioButton
                    android:id="@+id/question2_option3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/question2_chick"
                    android:textColor="#ccff90"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/question2_option4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/question2_lamb"
                    android:textColor="#ccff90"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="20dp"
            android:background="#558b2f"
            android:elevation="4dp"
            android:orientation="vertical"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:paddingStart="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_3"
                android:textColor="#f50057"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_3"
                android:textColor="#ccff90"
                android:textSize="24sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/question3_Option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/question3_option1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/question3_cat"
                    android:textColor="#ccff90"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/question3_option2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/question3_dog"
                    android:textColor="#ccff90"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/question3_option3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/question3_goat"
                    android:textColor="#ccff90"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <RadioButton
                    android:id="@+id/question3_option4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/question3_rabbit"
                    android:textColor="#ccff90"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="20dp"
            android:background="#558b2f"
            android:elevation="4dp"
            android:orientation="vertical"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:paddingStart="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_4"
                android:textColor="#f50057"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_4"
                android:textColor="#ccff90"
                android:textSize="24sp"
                android:textStyle="bold"/>

            <RadioGroup
                android:id="@+id/question4_Option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/question4_option1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/question4_kittens"
                    android:textColor="#ccff90"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />

                <RadioButton
                    android:id="@+id/question4_option2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/question4_cubs"
                    android:textColor="#ccff90"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />

                <RadioButton
                    android:id="@+id/question4_option3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/question4_leopards"
                    android:textColor="#ccff90"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />

                <RadioButton
                    android:id="@+id/question4_option4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/question4_calves"
                    android:textColor="#ccff90"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />

            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="20dp"
            android:background="#558b2f"
            android:elevation="4dp"
            android:orientation="vertical"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:paddingStart="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_5"
                android:textColor="#f50057"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_5"
                android:textColor="#ccff90"
                android:textSize="24sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/question5_Option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/question5_option1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/question5_piglet"
                    android:textColor="#ccff90"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />

                <RadioButton
                    android:id="@+id/question5_option2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/question5_cub"
                    android:textColor="#ccff90"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />

                <RadioButton
                    android:id="@+id/question5_option3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/question5_calf"
                    android:textColor="#ccff90"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />

                <RadioButton
                    android:id="@+id/question5_option4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/question5_foal"
                    android:textColor="#ccff90"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />

            </RadioGroup>
        </LinearLayout>

        <Button
            android:id="@+id/Btn_Send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#558b2f"
            android:onClick="submit"
            android:padding="25dp"
            android:text="@string/submit"
            android:textColor="#ccff90"
            android:textSize="24sp"
            android:textStyle="bold"/>
    </LinearLayout>


</ScrollView>


